[workspace]
members = [
    "lib",
    "cli",
    "config"
]

[profile.release]
debug = false

[patch.crates-io]
zcash_note_encryption = { git = "https://github.com/zingolabs/librustzcash", rev = "2c2e773a04a653e11b3999e8df8596c96d476bac" }
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "2c2e773a04a653e11b3999e8df8596c96d476bac" }
orchard = { git = "https://github.com/zingolabs/orchard", rev = "d05b6cee9df7c4019509e2f54899b5979fb641b5" }