[workspace]
members = [
    "lib",
    "cli",
    "config"
]

[profile.release]
debug = false

[patch.crates-io]
zcash_note_encryption = { git = "https://github.com/zingolabs/librustzcash", rev = "580f87dc3ec5d12a449b437a0358228b0fe936f3" }
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "580f87dc3ec5d12a449b437a0358228b0fe936f3" }
