[workspace]
members = [
    "zingolib",
    "cli",
    "config"
]

[profile.release]
debug = false

[patch.crates-io]
zcash_note_encryption = { git = "https://github.com/zingolabs/librustzcash", rev = "d66f7f70516e6da5c24008874a926d41221b1346" }
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "d66f7f70516e6da5c24008874a926d41221b1346" }
orchard = { git = "https://github.com/jarys/orchard", rev = "d0141ec3fab03e9676ad05e075b2bbdb9e63a30c" }
